--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,18 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
           make lint
 
+  vet:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - name: Vet
+        run: make vet
+
   test:
     strategy:
       matrix:
@@ -63,6 +75,7 @@ jobs:
   build:
     needs:
       - lint
+      - vet
       - test
       - test-cache
     strategy:
@@ -79,6 +92,23 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: make build
+
+  fmt:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - vet
+      - test
+      - test-cache
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - name: Format
+        run: make fmt
 
   dockerize_and_commit:
     needs:
