--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,6 +31,20 @@ jobs:
       - name: Vet
         run: make vet
 
+  ineffassign:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - name: Lint
+        run: |
+          go get -u github.com/gordonklaus/ineffassign
+          make ineffassign
+
   test:
     strategy:
       matrix:
@@ -74,6 +88,7 @@ jobs:
     needs:
       - lint
       - vet
+      - ineffassign
       - test
       - test-cache
     strategy:
