--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,6 +33,20 @@ jobs:
       - name: Vet
         run: make vet
 
+  ineffassign:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - name: Lint
+        run: |
+          go get -u github.com/gordonklaus/ineffassign
+          make ineffassign
+
   test:
     strategy:
       matrix:
@@ -76,6 +90,7 @@ jobs:
     needs:
       - lint
       - vet
+      - ineffassign
       - test
       - test-cache
     strategy:
@@ -98,6 +113,7 @@ jobs:
     needs:
       - lint
       - vet
+      - ineffassign
       - test
       - test-cache
     steps:
