fix possible race condition

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -129,6 +129,7 @@ jobs:
   dockerize_and_commit:
     needs:
       - build
+      - fmt
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
