--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,9 +15,7 @@ jobs:
         with:
           go-version: 1.16.x
       - name: Lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-          make lint
+        run: make lint
 
   vet:
     runs-on: ubuntu-latest
@@ -41,9 +39,7 @@ jobs:
         with:
           go-version: 1.16.x
       - name: Lint
-        run: |
-          go get -u github.com/gordonklaus/ineffassign
-          make ineffassign
+        run: make ineffassign
 
   test:
     strategy:
