--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           go-version: 1.16.x
       - name: Lint
-        run: make lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
+          make lint
 
   vet:
     runs-on: ubuntu-latest
