--- a/charts/auth-service/values.yaml
+++ b/charts/auth-service/values.yaml
@@ -14,7 +14,7 @@ deployment:
   variables:
     - name: TZ
       value: Europe/Istanbul
-    - name: PORT
+    - name: SERVER_PORT
       value: 5000
   probes:
     livenessProbe:
