--- a/charts/auth-service/values.yaml
+++ b/charts/auth-service/values.yaml
@@ -14,8 +14,8 @@ deployment:
   variables:
     - name: TZ
       value: Europe/Istanbul
-    - name: SERVER_PORT
-      value: 5000
+    - name: ACTIVE_PROFILE
+      value: prod
   probes:
     livenessProbe:
       failureThreshold: 3
