--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
+        env:
+          ACTIVE_PROFILE: unit-test
         run: make test
 
   test-cache:
@@ -82,6 +84,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Test
+        env:
+          ACTIVE_PROFILE: unit-test
         run: make test
 
   build:
