--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -78,6 +78,8 @@ jobs:
           go-version: 1.16.x
       - name: Coverage Test
         run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
+        env:
+          ACTIVE_PROFILE: unit-test
       - name: Coverage Upload
         run: bash <(curl -s https://codecov.io/bash)
 
