--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,14 @@ repos:
   - id: go-mod-vendor
   - id: go-fmt
   - id: go-imports
+  - id: validate-toml
   - id: golangci-lint
-  - id: go-unit-tests
   - id: go-build
   - id: go-mod-tidy
+
+- repo: local
+  hooks:
+    - id: go-unit-test
+      name: golang unit testing
+      language: system
+      entry: bash -c "ACTIVE_PROFILE=unit-test go test ./..."
