--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 sonar.go.coverage.reportPaths=/github/workspace/coverage.txt
+sonar.coverage.exclusions=cmd/**/*
